# mcp-multi-llm

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
docs/superpowers/plans/: 2026-03-26-gemini-fix-custom-providers.md
docs/superpowers/specs/: 2026-03-26-gemini-fix-custom-providers-design.md
history/: store.py
sessions/: anthropic_compat_session.py  api_session.py  base.py  claude_session.py  codex_session.py  gemini_session.py  openai_compat_session.py  provider_config.py
tests/: test_gemini_env.py  test_openai_compat_session.py  test_provider_config.py
